last_errors_check_v2.txt
cargo :     Checking server v0.1.0 
(C:\Users\joela\dev\lasertargets\server)
At line:1 char:1
+ cargo check -p server --test integrationtest 2>&1 | Out-File 
-FilePat ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking se... 
   targets\server):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused imports: `CameraConfiguration` and 
`SceneConfiguration`
  --> server\test\integrationtest.rs:10:22
   |
10 | use common::config::{CameraConfiguration, 
ProjectorConfiguration, SceneConfiguration};
   |                      ^^^^^^^^^^^^^^^^^^^                   
       ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> server\test\integrationtest.rs:369:25
    |
369 |     let _endpoint: () = 
server.get_endpoint_mut().unwrap();
    |                    --   
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `&mut 
Endpoint`
    |                    |
    |                    expected due to this

For more information about this error, try `rustc --explain 
E0308`.
warning: `server` (test "integrationtest") generated 1 warning
error: could not compile `server` (test "integrationtest") due 
to 1 previous error; 1 warning emitted
